// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot 1`] = `
<div
  className="finishedResult"
>
  <div
    className="mb-3"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Successfully completed.",
      }
    }
  />
</div>
`;

exports[`snapshot custom message 1`] = `
<div
  className="finishedResult"
>
  <div
    className="mb-3"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Test message.",
      }
    }
  />
  <button
    className="btn btn-secondary"
    onClick={[Function]}
    type="button"
  >
    Back
  </button>
</div>
`;
